<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?android:attr/buttonBarButtonStyle"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/buttonAppNet"
                android:layout_width="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:text="@string/net"
                android:onClick="buttonNetOnClick" />

            <Button
                android:id="@+id/buttonAppNetOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonNetOffClick"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/net_off" />

            <Button
                android:id="@+id/buttonAppNetVolUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonNetVolUpClick"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/volume_up" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <Button
                android:id="@+id/buttonTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv"
                android:onClick="buttonTvOnClick"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:id="@+id/buttonAppTvOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_off"
                android:onClick="buttonTvOffOnClick"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonAppChangeTvSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonChangeTvSourceOnClick"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/change_source"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonAppLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonLightClick"
                android:text="@string/light" style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonTempClick"
                android:text="@string/temperature" style="?android:attr/buttonBarButtonStyle"  />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonAllOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonAllOffOnClick"
                android:text="@string/off" style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>